--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"author": "Vinh Nguyen <vinhnq.ufm@gmail.com>",
 	"license": "MIT",
 	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
 		"lint": "eslint *.js",
 		"prepare": "husky install"
 	},
@@ -22,10 +25,17 @@
 		"eslint-plugin-react": "^7.29.4",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.7",
-		"prettier": "2.6.2"
+		"prettier": "2.6.2",
+		"sass": "^1.50.0"
 	},
 	"dependencies": {
+		"bootstrap": "^5.1.3",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-prettier": "^4.0.0"
+		"eslint-plugin-prettier": "^4.0.0",
+		"next": "^12.1.4",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-icons": "^4.3.1",
+		"reactstrap": "^9.0.1"
 	}
 }
