--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-	"useTabs": true,
-	"tabSize": 2,
-	"semi": true,
-	"singleQuote": true,
-	"trailingComma": "es5",
-	"bracketSpacing": true
+  "singleQuote": true,
+  "printWidth": 120,
+  "trailingComma": "none",
+  "semi": false,
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
