--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "Front-End",
+	"name": "front-end",
 	"version": "1.0.0",
 	"description": "Front-End Capstone Application",
 	"main": "index.js",
@@ -17,6 +17,8 @@
 		"**/*": "prettier --write --ignore-unknown"
 	},
 	"devDependencies": {
+		"@types/node": "^17.0.23",
+		"@types/react": "^18.0.3",
 		"eslint": "^7.32.0",
 		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-import": "^2.26.0",
@@ -26,16 +28,25 @@
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.7",
 		"prettier": "2.6.2",
-		"sass": "^1.50.0"
+		"sass": "^1.50.0",
+		"typescript": "4.4.3"
 	},
 	"dependencies": {
+		"axios": "^0.24.0",
 		"bootstrap": "^5.1.3",
+		"eslint-config-next": "^12.1.5",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
+		"lodash": "^4.17.21",
+		"mobx": "^6.3.7",
+		"mobx-react": "^7.2.1",
 		"next": "^12.1.4",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"react-hook-form": "^7.20.2",
 		"react-icons": "^4.3.1",
+		"react-router-dom": "^6.0.2",
+		"react-toastify": "^8.1.0",
 		"reactstrap": "^9.0.1"
 	}
 }
