feat: Fix UI Home page, component  change to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,12 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "types": [
+    "node",
+    "webpack",
+    "react",
+    "react-dom",
+    "reactstrap"
+  ],
 }
